temporory integration with create test done

--- a/src/components/Top/css/Top.module.css
+++ b/src/components/Top/css/Top.module.css
@@ -1,5 +1,6 @@
 #topBar {
 	height: 90px;
+	max-width: 100vw;
 	background: rgba(100, 100, 100, 0.15);
 }
 
@@ -13,4 +14,27 @@
 	color: white;
 	text-shadow: 0 0 3px black;
 	text-decoration: none;
+}
+
+#edu {
+	cursor: pointer;
+}
+
+@media only screen and (max-width: 850px) {
+	#edu {
+		font-size: 8.5vw;
+	}
+	#navCont {
+		display: none;
+	}
+	#topBar {
+		height: 60px;
+	}
+}
+
+@media only screen and (max-width: 1000px) and (min-width: 700px) {
+	#edu {
+		font-size: 5.5vw;
+		margin-right: 40px;
+	}
 }
