--- a/src/components/Top/css/UserBtn.module.css
+++ b/src/components/Top/css/UserBtn.module.css
@@ -59,3 +59,14 @@
 	display: block;
 	color: black;
 }
+
+@media only screen and (max-width: 800px) {
+	#userBtnCont {
+		/* position: relative; */
+		/* right: 3vw; */
+	}
+
+	#userPannel {
+		top: 72px;
+	}
+}
