intergarting with backend added check test and delete test

--- a/src/components/Body/css/Tests.module.css
+++ b/src/components/Body/css/Tests.module.css
@@ -30,3 +30,18 @@
 	text-decoration: none;
 	color: white;
 }
+
+.assBtn {
+	font-size: x-large;
+	background: none;
+	border: none;
+}
+
+.assBtn:focus {
+	outline: none;
+}
+
+.assBtn span {
+	position: relative;
+	bottom: 4px;
+}
